# financialstocks

./: .gitignore  README.md  dashboard_env_backup.txt  start-dashboard.ps1
dashboard/: README.md  package-lock.json  package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/api/ai-analysis/: route.ts
dashboard/src/app/api/financials/[symbol]/: route.ts
dashboard/src/app/api/news/[symbol]/: route.ts
dashboard/src/app/api/snapshot/: route.ts
dashboard/src/app/api/stock/[symbol]/: route.ts
dashboard/src/app/api/technicals/[symbol]/: route.ts
dashboard/src/components/: AIAnalysisTab.tsx  CandlestickChart.tsx  FinancialsGrid.tsx  Heatmap.tsx  NewsFeed.tsx  PriceHeader.tsx  StockPicker.tsx  TechnicalPanel.tsx
dashboard/src/data/: nse200.ts
dashboard/src/lib/: financialDatasets.ts
directives/: financial-datasets-mcp.md
execution/: test_api.py
mcp-server/: pyproject.toml  server.py  start-mcp.ps1  test_tickers.py  yfinance_sidecar.py
