[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.3.0",
    "pandas>=3.0.1",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.34.0",
    "yfinance>=1.2.0",
]
